--- a/src/app/carrito/ui/carrito.component.html
+++ b/src/app/carrito/ui/carrito.component.html
@@ -22,9 +22,9 @@
     <!-- Botón de PayPal -->
     <div id="paypal-button-container"></div>
 
-    <!-- <button (click)="generarXML()" class="carro-button">
+     <button (click)="generarXML()" class="carro-button">
         Descargar Carrito
-    </button>-->
+    </button>
 </div>
 
 <p *ngIf="carrito.length === 0">
