--- a/src/app/inventario/ui/inventario.component.css
+++ b/src/app/inventario/ui/inventario.component.css
@@ -152,3 +152,52 @@ button:hover {
 .form button:hover {
   background-color: #2980b9;
 }
+
+.botones-navegacion {
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.botones-navegacion button {
+  background-color: #c08429; /* Mismo color que "Volver a Productos" */
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.botones-navegacion button:hover {
+  background-color: #a76c1f;
+  transform: scale(1.05);
+}
+
+.botones-verticales {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Alinea a la izquierda */
+  gap: 12px;
+  margin: 15px 0 30px 0;
+  max-width: 200px; /* Puedes ajustar el ancho */
+}
+
+.botones-verticales button {
+  width: 100%;
+  background-color: #c08429; /* Mismo color que "Volver a Productos" */
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.botones-verticales button:hover {
+  background-color: #a76c1f;
+  transform: scale(1.05);
+}
